--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,11 +1,12 @@
 @import
-    "./partials/header",
-    "./partials/footer",
-    "./partials/index",
-    "./partials/aboutme",
-    "./partials/publications",
-    "./partials/alvoroca";
-    // "./partials/header",
+"./partials/colours",
+"./partials/header",
+"./partials/footer",
+"./partials/index",
+"./partials/aboutme",
+"./partials/publications",
+"./partials/alvoroca";
+    
     // "./partials/header",
 
 
