--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -16,8 +16,8 @@
         grid-area: header;
         display: grid;
         grid-template-columns: 30% 70%;
-        background-color: whitesmoke;
-
+        background-color: $bkgrn-alvoroca;
+ 
         .alvoroca_navbar {
             display: flex;           
             align-items: center;            
@@ -41,7 +41,7 @@
                 
                 a{
                     text-decoration: none;
-                    color: rgb(144, 144, 241);
+                    color: rgb(137, 137, 201);
                     font-size: 1.3rem;
                 }
                 .alvoroca_link{
@@ -64,9 +64,11 @@
         }
     }
 
+
     .alvoroca_banner{
-        margin-top: 40px;
-        background-color: whitesmoke;
+        // margin-top: 40px;
+        padding-top: 40px;
+        background-color: $bkgrn-alvoroca;
         .banner_img{
             height: 100%;
             width: 450px;
@@ -78,7 +80,7 @@
         display: grid;
         grid-template-columns: 60% auto;
         flex-direction: row;
-        background-color: whitesmoke;
+        background-color: $bkgrn-alvoroca;
         padding-top: 80px;
         padding-bottom: 30px;
         padding-left: 20px;
@@ -101,7 +103,7 @@
 
             .card_title{                
                 font-size: 1.6em;
-                text-shadow: 1px 1px;                
+                text-shadow: 0.5px 0.5px;                
                 color: rgb(151, 151, 240);
             }
             a{                                                
@@ -124,7 +126,7 @@
         grid-template-columns: 1fr 1fr;    
         height: auto;
         width: 100%;
-        background-color: whitesmoke;
+        background-color: $bkgrn-alvoroca;
         align-items: center;
         padding: 50px 20px 20px 30px;
         gap: 40px;
@@ -146,36 +148,37 @@
             .card_description {
                 margin-top: 8px;
                 margin-left: 8px;                
-                color: rgb(97, 97, 243);
+                color: rgb(137, 137, 201);
 
                 .card_title {
-                    margin-bottom: 10px;                         
+                    margin-bottom: 10px;
+                    color:rgb(80, 80, 136);
                 }
                 a{
-                    margin-top: 30px    ;
+                    margin-top: 20px    ;
                     text-decoration: none;
                     color: rgb(122, 122, 246);
                     display: flex;
                     justify-content: flex-end;
                     margin-right: 14px;                
                 }
+                
             }
         }
+
         .card8{
             background-color: blue;
             &:hover{
                 background-color: yellow;
                 
             }
-            // .card_container{
-            //     img:hover{
-            //             background-position: url("https://drive.google.com/file/d/1Yp42UcrtnvG22ei67j-ns5oYhbE_hEof/view?usp=share_link");                        
-                    
-            //     }
-            // }
-            // `
-            
+            // MISSING HOVER CLICK ON TO CHANGE                   
         }        
+        
+    }
+
+    .footer, .footer_alvo{
+        background-color: $bkgrn-alvoroca;
     }
 }
 
@@ -184,21 +187,46 @@
 
 
 
-
-
-
-
-// @media screen and (min-width: 1200px) {
-//     .alvoroca_container {
-//         display: grid;
-//         grid-template-areas:
-//                         "header  header   header"
-//                         "article article article"
-//                         "main    main    main"
-//                         "footer footer footer";
-//         grid-template-columns: 1fr 1fr 1fr;
-//         grid-template-rows: 110px auto auto 100px;
+@media screen and (min-width: 1200px) {
+    .alvoroca_container {
+        display: grid;
+            grid-template-areas:
+                        "header  header   header"
+                        "banner  banner   banner"
+                        "article article article"
+                        "main    main    main"
+                        "footer footer footer";
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 110px auto auto 100px;
     
+        .alvoroca_header{
+            grid-area: header;            
+            display: grid;
+            grid-template-columns: 30% 70%;
+            background-color: whitesmoke;
+        }
+
+        .alvoroca_banner{
+            grid-area: banner;
+
+        }
+
+        .alvoroca_article{
+            grid-area: article;
+            
+        }
+
+        .alvoroca_main{
+            grid-area: main;
+            
+        }
+
+        .footer{
+            grid-area: footer;
+        }
+
+    }
+}
 //         .alvoroca_header{
 //             grid-area: header;
 //             display: flex;            
