--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -17,7 +17,7 @@
         display: grid;
         grid-template-columns: 30% 70%;
         background-color: $bkgrn-alvoroca;
- 
+
         .alvoroca_navbar {
             display: flex;           
             align-items: center;            
@@ -66,7 +66,6 @@
 
 
     .alvoroca_banner{
-        // margin-top: 40px;
         padding-top: 40px;
         background-color: $bkgrn-alvoroca;
         .banner_img{
@@ -185,8 +184,6 @@
 
 
 
-
-
 @media screen and (min-width: 1200px) {
     .alvoroca_container {
         display: grid;
@@ -197,32 +194,63 @@
                         "main    main    main"
                         "footer footer footer";
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 110px auto auto 100px;
+        grid-template-rows: 190px auto auto auto 100px;
     
         .alvoroca_header{
             grid-area: header;            
             display: grid;
-            grid-template-columns: 30% 70%;
-            background-color: whitesmoke;
+            grid-template-columns: 40% 60%;
+
+            .alvoroca_logo {
+                padding-top: 20px;
+                padding-left: 40px;
+                .alvo_logo{
+                    padding-left: 0px;
+                    width: 170px;
+                    height: 160px;
+                }
+                
+            }
+
+            .alvoroca_navbar{
+                .alvoroca_nav_list li a{
+                    font-size: 1.7rem;
+
+                }
+            }
+    
         }
+        
 
         .alvoroca_banner{
             grid-area: banner;
-
+            background-attachment: fixed;
+            .banner_img{
+                min-width: 100%;
+                width: 450px;
+                background-attachment: fixed;
+            }        
         }
 
         .alvoroca_article{
             grid-area: article;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             
         }
 
         .alvoroca_main{
             grid-area: main;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            padding-bottom: 90px;
             
         }
 
-        .footer{
+        .footer, .footer_alvo{
             grid-area: footer;
+            background-color: yellow;
+
         }
 
     }
