--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,19 +270,21 @@
   display: grid;
   grid-template-areas: "header" "banner" "article" "main" "footer";
   grid-template-columns: 450px;
-  grid-template-rows: 130px auto auto auto 80px;
+  grid-template-rows: 160px auto auto auto 80px;
 }
 .alvoroca_container .alvoroca_header {
   grid-area: header;
   display: grid;
   grid-template-columns: 30% 70%;
   background-color: white;
+  align-items: start;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar {
   display: flex;
-  align-items: center;
+  align-items: start;
   padding-left: 60px;
   padding-right: 15px;
+  padding-top: 40px;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list {
   display: flex;
@@ -312,12 +314,11 @@
 }
 .alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
   padding-left: 0px;
-  width: 120px;
-  height: 110px;
+  width: 130px;
+  height: 120px;
 }
 .alvoroca_container .alvoroca_banner {
-  padding-top: 40px;
-  background-color: white;
+  background-color: chartreuse;
 }
 .alvoroca_container .alvoroca_banner .banner_img {
   height: 100%;
@@ -326,9 +327,9 @@
 .alvoroca_container .alvoroca_article {
   grid-area: article;
   display: grid;
-  grid-template-columns: 60% auto;
-  flex-direction: row;
+  grid-template-columns: 70% auto;
   background-color: white;
+  align-content: center;
   padding-top: 80px;
   padding-bottom: 30px;
   padding-left: 20px;
@@ -413,33 +414,42 @@
     display: grid;
     grid-template-areas: "header  header   header" "banner  banner   banner" "article article article" "main    main    main" "footer footer footer";
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 190px auto auto auto 100px;
+    grid-template-rows: 240px auto auto auto 100px;
   }
   .alvoroca_container .alvoroca_header {
     grid-area: header;
     display: grid;
     grid-template-columns: 40% 60%;
+    grid-template-rows: auto;
+    background-color: white;
   }
   .alvoroca_container .alvoroca_header .alvoroca_logo {
-    padding-top: 20px;
     padding-left: 40px;
+    padding-top: 25px;
   }
   .alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
-    padding-left: 0px;
-    width: 170px;
-    height: 160px;
+    width: 210px;
+    height: 200px;
+  }
+  .alvoroca_container .alvoroca_header .alvoroca_navbar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    background-color: white;
+    padding-top: 70px;
   }
   .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
     font-size: 1.7rem;
   }
+  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_link {
+    font-size: 2.9rem;
+  }
   .alvoroca_container .alvoroca_banner {
     grid-area: banner;
-    background-attachment: fixed;
+    background: white;
   }
   .alvoroca_container .alvoroca_banner .banner_img {
     min-width: 100%;
-    width: 450px;
-    background-attachment: fixed;
   }
   .alvoroca_container .alvoroca_article {
     grid-area: article;
