alvoroca desktop view to be continued

--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -259,7 +259,7 @@
         .alvoroca_main{
             grid-area: main;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(3, 1fr);
             padding-bottom: 90px;
             
         }
