--- a/styles/styles.css
+++ b/styles/styles.css
@@ -459,7 +459,7 @@
   .alvoroca_container .alvoroca_main {
     grid-area: main;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     padding-bottom: 90px;
   }
   .alvoroca_container .footer, .alvoroca_container .footer_alvo {
