changes made in alborocaMobile

--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -1,21 +1,35 @@
 
 // MOBILE FIRST 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html,body {
+    height: 100%;
+    width: 100%;
+    right: 0;
+    left: 0;
+}
 
 .alvoroca_container {
     display: grid;
+    gap: 30px;
     grid-template-areas:
                     "header"
                     "banner"
                     "article"
                     "main"
                     "footer";
-    grid-template-columns: 450px;
+    grid-template-columns: 100%;
+    width: 100vw;
     grid-template-rows: 160px auto auto auto 80px;
 
     .alvoroca_header{
         grid-area: header;
         display: grid;
-        grid-template-columns: 30% 70%;
+        grid-template-columns: auto 80%;
         background-color: $bkgrn-alvoroca;
         align-items: start;
 
@@ -24,8 +38,8 @@
             display: flex;           
             align-items: start;            
             // border: solid 1px;
-            padding-left: 60px;
-            padding-right: 15px;
+            padding-left: 50px;
+            padding-right: 0px;
             padding-top: 40px;
             
         
@@ -33,10 +47,10 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
-            margin-right: 20px;
+            margin-right: 5px;
             align-items: center;
             width: 100%;
-            // background-color: yellow;
+            background-color: yellow;
             li {
                 margin-right: 13px;
                 margin-top: 8px;
@@ -69,12 +83,13 @@
 
 
     .alvoroca_banner{
-        // // padding-top: 40px;
         background-color: chartreuse;
-        // background-color: $bkgrn-alvoroca;
+        // background-color: $bkgrn-alvoroca;   
+        display: flex;
+        align-items: center;
+        
         .banner_img{
-            height: 100%;
-            width: 450px;
+            width: 470px;
         }        
     }
 
@@ -86,10 +101,9 @@
         align-content: center;
         padding-top: 80px;
         padding-bottom: 30px;
-        padding-left: 20px;
+        padding-left: 40px;
 
         .card_image {
-
             .card_images{                                                                    
                 width: 230px;
                 height: 260px;
@@ -102,7 +116,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            padding-left: 10px;
+            padding-left: 20px;
             align-items: flex-start;
 
             .card_title{                
@@ -133,7 +147,7 @@
         background-color: $bkgrn-alvoroca;
         align-items: center;
         padding: 50px 20px 20px 30px;
-        gap: 40px;
+        gap: 30px;
 
         .card {
             width: 170px;
