--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,7 +105,6 @@
   display: grid;
   grid-template-areas: "header" "article" "footer";
   grid-template-rows: 140px 450px 140px;
-  grid-template-columns: 370px;
   align-items: center;
   text-align: center;
   min-width: 100%;
@@ -272,46 +271,42 @@
   padding: 0;
 }
 
-html, body {
+body {
   height: 100%;
-  width: 100%;
-  right: 0;
-  left: 0;
 }
 
 .alvoroca_container {
   display: grid;
-  gap: 30px;
   grid-template-areas: "header" "banner" "article" "main" "footer";
-  grid-template-columns: 100%;
-  width: 100vw;
-  grid-template-rows: 160px auto auto auto 80px;
+  grid-template-rows: 140px auto auto auto 80px;
+  grid-template-columns: 1fr;
+  gap: 30px;
+  min-width: 100%;
 }
 .alvoroca_container .alvoroca_header {
   grid-area: header;
   display: grid;
   grid-template-columns: auto 80%;
   background-color: white;
-  align-items: start;
+}
+.alvoroca_container .alvoroca_header .alvoroca_logo {
+  margin-left: 5px;
+}
+.alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
+  width: 87px;
+  height: 90px;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar {
-  display: flex;
-  align-items: start;
-  padding-left: 50px;
-  padding-right: 0px;
-  padding-top: 40px;
+  margin-left: 20px;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-right: 5px;
-  align-items: center;
-  width: 100%;
   background-color: yellow;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li {
-  margin-right: 13px;
+  margin-right: 8px;
   margin-top: 8px;
   text-decoration: none;
 }
@@ -324,22 +319,11 @@ html, body {
   color: rgb(178, 178, 246);
   font-size: 1.5rem;
 }
-.alvoroca_container .alvoroca_header .alvoroca_logo {
-  padding-top: 10px;
-  padding-left: 20px;
-}
-.alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
-  padding-left: 0px;
-  width: 130px;
-  height: 120px;
-}
 .alvoroca_container .alvoroca_banner {
   background-color: chartreuse;
-  display: flex;
-  align-items: center;
 }
 .alvoroca_container .alvoroca_banner .banner_img {
-  width: 470px;
+  width: 80%;
 }
 .alvoroca_container .alvoroca_article {
   grid-area: article;
@@ -349,7 +333,6 @@ html, body {
   align-content: center;
   padding-top: 80px;
   padding-bottom: 30px;
-  padding-left: 40px;
 }
 .alvoroca_container .alvoroca_article .card_image .card_images {
   width: 230px;
@@ -361,7 +344,6 @@ html, body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding-left: 20px;
   align-items: flex-start;
 }
 .alvoroca_container .alvoroca_article .card_text .card_title {
@@ -384,7 +366,6 @@ html, body {
   width: 100%;
   background-color: white;
   align-items: center;
-  padding: 50px 20px 20px 30px;
   gap: 30px;
 }
 .alvoroca_container .alvoroca_main .card {
@@ -393,7 +374,6 @@ html, body {
   border: solid 1px;
   border-radius: 0px 0px 5px 5px;
   margin-bottom: 5px;
-  margin-right: 20px;
 }
 .alvoroca_container .alvoroca_main .card .card_images {
   height: 180px;
@@ -426,64 +406,203 @@ html, body {
   background-color: white;
 }
 
+/*
 @media screen and (min-width: 1200px) {
-  .alvoroca_container {
-    display: grid;
-    grid-template-areas: "header  header   header" "banner  banner   banner" "article article article" "main    main    main" "footer footer footer";
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 240px auto auto auto 100px;
-  }
-  .alvoroca_container .alvoroca_header {
-    grid-area: header;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: auto;
-    background-color: white;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_logo {
-    padding-left: 40px;
-    padding-top: 25px;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
-    width: 210px;
-    height: 200px;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    background-color: white;
-    padding-top: 70px;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
-    font-size: 1.7rem;
-  }
-  .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_link {
-    font-size: 2.9rem;
-  }
-  .alvoroca_container .alvoroca_banner {
-    grid-area: banner;
-    background: white;
-  }
-  .alvoroca_container .alvoroca_banner .banner_img {
-    min-width: 100%;
-  }
-  .alvoroca_container .alvoroca_article {
-    grid-area: article;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .alvoroca_container .alvoroca_main {
-    grid-area: main;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding-bottom: 90px;
-  }
-  .alvoroca_container .footer, .alvoroca_container .footer_alvo {
-    grid-area: footer;
-    background-color: yellow;
-  }
+    .alvoroca_container {
+        display: grid;
+            grid-template-areas:
+                        "header  header   header"
+                        "banner  banner   banner"
+                        "article article article"
+                        "main    main    main"
+                        "footer footer footer";
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 240px auto auto auto 100px;
+
+        .alvoroca_header{
+            grid-area: header;            
+            display: grid;
+            grid-template-columns: 40% 60%;
+            grid-template-rows: auto;
+            background-color: $bkgrn-alvoroca;
+
+
+            .alvoroca_logo {
+                padding-left: 40px;
+                padding-top: 25px;
+                .alvo_logo{
+                    width: 210px;
+                    height: 200px;
+                }
+
+            }
+
+            .alvoroca_navbar{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                background-color: $bkgrn-alvoroca;
+                padding-top: 70px;
+
+                .alvoroca_nav_list li a{
+                    font-size: 1.7rem;
+                }
+
+
+                .alvoroca_link{
+                    font-size: 2.9rem;
+
+                }
+
+            }
+
+        }
+
+
+        .alvoroca_banner{
+            grid-area: banner;
+            background: $bkgrn-alvoroca;
+            .banner_img{
+                min-width: 100%;                
+            }        
+        }
+
+        .alvoroca_article{
+            grid-area: article;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+
+        }
+
+        .alvoroca_main{
+            grid-area: main;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            padding-bottom: 90px;
+
+        }
+
+        .footer, .footer_alvo{
+            grid-area: footer;
+            background-color: yellow;
+
+        }
+
+    }
 }
+//         .alvoroca_header{
+//             grid-area: header;
+//             display: flex;            
+//             background-color: pink;
+//             align-items: center;
+//             justify-content: space-evenly;
+
+
+//             .alvo_logo {
+//                 width: 50px;
+//                 height: 50px;
+//                 margin-top: 15px;
+//                 margin-left: 5px;
+//             }
+
+//             .alvoroca_navbar {                
+//                 width: 60%;
+//                 border: solid 1px;
+
+//                     .alvoroca_nav_list {
+//                         display: flex;
+//                         flex-wrap: wrap;
+//                         justify-content: space-between;
+//                     }
+//             }
+//         }
+
+
+//         .alvoroca_article{
+//             grid-area: article;
+//             background-color: lightblue;
+//             padding-top: 50px;
+//             padding-bottom: 80px;
+//             display: grid;
+//             grid-template-columns: 1fr 1fr;
+
+//             .card_image{           
+//                 .card_images{
+//                     width: 400px;
+//                     height: 500px;
+//                 }                                                                                                          
+//             }
+
+//             .card_text{
+//                 padding-top: 300px;
+//                 padding-right: 300px;
+//                 .card_title{
+//                     padding-bottom: 80px;
+//                     font-size: 2em;
+//                 }
+//                 .addlink{
+//                     font-size: 1.4em;
+//                     text-decoration: none;
+//                     color: black;
+//                 }
+//                 }
+
+//         }  
+
+//         .alvoroca_main{
+//             grid-area: main;
+//             background-color: pink;            
+//             width: 100%;
+//             height: auto;
+
+
+//             .cards{
+//                 display: flex;
+//                 justify-content: space-evenly;
+//                 align-items: center;
+//                 width: 100%;
+//                 height: auto;
+//                 padding-bottom: 30px;
+
+
+//                 .card{
+//                     margin-right: 40px;
+//                     margin-left: 40px;
+//                     margin-bottom: 70px;
+//                     width: 220px;
+//                     height: auto;
+
+//                     .card_container{
+//                         .card_images{
+//                             width: 220px;
+//                             height: 250px;
+//                         }
+//                     }
+//                     .card_description{
+//                         margin-top: 15px;
+
+//                         .card_title{
+//                             font-size: 1.7em;
+//                         }
+//                         .card_details{
+//                             font-size: 1.7em;
+//                         }
+
+//                         a{
+//                             margin-left: 60%;
+//                             text-decoration: none;
+//                             font-size: 1.4em;
+//                             color: blueviolet;
+//                             justify-content: right;
+//                         }
+//                     }
+//                 }
+
+//             }
+//         }
+//      }
+// } 
+*/
 * {
   margin: 0;
   padding: 0;
