--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -18,15 +18,16 @@ body {
     "article"
     "main"
     "footer";
-    grid-template-rows: 140px auto auto auto 80px;
+    grid-template-rows: auto auto auto auto 80px;
     grid-template-columns: 1fr;
     gap: 30px;
     min-width: 100%;
     
     .alvoroca_header{
+        margin-top: 20px;
         grid-area: header;
         display: grid;
-        grid-template-columns: auto 80%;
+        grid-template-columns: 20% auto;
         background-color: $bkgrn-alvoroca;
 
 
@@ -68,10 +69,10 @@ body {
 
 
     .alvoroca_banner{
-    background-color: chartreuse;
     //     // background-color: $bkgrn-alvoroca;   
     .banner_img{
-            width: 80%;
+        width: 100%;
+        height: 120%;
     }        
     }
 
@@ -81,8 +82,7 @@ body {
         grid-template-columns: 70% auto;   
         background-color: $bkgrn-alvoroca;
         align-content: center;
-        padding-top: 80px;
-        padding-bottom: 30px;
+        padding: 100px 10px 100px 10px;
 
         .card_image {
             .card_images{                                                                    
@@ -126,9 +126,11 @@ body {
         background-color: $bkgrn-alvoroca;
         align-items: center;
         gap: 30px;
+        padding-left: 10px;
+        padding-right: 10px;
 
         .card {
-            width: 170px;
+            width: 100%;
             height: auto;
             border: solid 1px;
             border-radius: 0px 0px 5px 5px;
