--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -26,6 +26,7 @@
         margin-right: 30px;
 
         .footer_logos_img {
+            height: 30px;
             width: 30px;
             margin-left: 12px;
 
