--- a/styles/partials/_colours.scss
+++ b/styles/partials/_colours.scss
@@ -3,22 +3,30 @@
 //    Background Colors
 
 
-//  Alvoroca
+//  A l v o r o c a
 
-// $bkgrn-alvoroca: salmon;
-// $bkgrn-alvoroca: coral;
-// $bkgrn-alvoroca: indianred;
-// $bkgrn-alvoroca: olive;
-// $bkgrn-alvoroca: rgb(53, 53, 10);
-
-// background
-$bkgrn-alvoroca: white;
+// Background
+// (Red Wine colour)
+$bkgrn-alvoroca: rgb(116, 47, 55);
 
 
 
+//   Fonts
 
-$kerosene-link: rgb(61, 61, 123);
+$f-header-links: rgb(227, 218, 201);
+
+$f-solapino: white;
+
+$f-cards-text: white;
+
+$f-cards-links: lavender;
+
+
+
+
+
+
+$kerosene-link: rgb(234, 170, 0);
 // tho it-s not a link yet 
 
 
-// $bkgrn-alvoroca: white;
